--- a/public/assets/css/left/left.css
+++ b/public/assets/css/left/left.css
@@ -1,3 +1,8 @@
+#left-container {
+    top: inherit;
+    left: 0;
+}
+
 .icon-left {
     position: fixed;
     top: 0;
@@ -14,7 +19,6 @@
 
 /* PROFILE */
 .profile-nav {
-    width: inherit;
     font-family: var(--display-font);
 }
 
